--- a/index.html
+++ b/index.html
@@ -4,44 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tenho uma pergunta para você</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="background.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="background.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
+      <section class="botao-fujao">
+        <h1>Quer sair comigo?</h1>
 
-        <section class="botao-fujao">
-            <h1>Quer casar comigo?</h1>
-
-            <div class="btns">
-                <a href="https://www.youtube.com/shorts/iSv7yg1MYrk"><button>Sim</button></a>
-                <button id="btn-nao">Não</button>
-            </div>
-
-        </section>
-
-        <div class="wrapper">
-          <svg
-            class="heart"
-            version="1.1"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-            x="0px"
-            y="0px"
-            width="101.7px"
-            height="87.6px"
-            viewBox="0 0 101.7 87.6"
-            enable-background="new 0 0 101.7 87.6"
-            xml:space="preserve"
+        <div class="btns">
+          <a href="https://www.youtube.com/shorts/iSv7yg1MYrk"
+            ><button>Sim</button></a
           >
-            <path
-              d="M51,12.8c0-0.1-0.1-0.1-0.1-0.2c0,0.1-0.1,0.1-0.1,0.2C31-10.7,0,0.2,0,28.9c0,27.6,40.7,56.9,50.9,58.8
-            c10.1-1.8,50.9-31.1,50.9-58.8C101.7,0.2,70.7-10.7,51,12.8z"
-            />
-          </svg>
+          <button id="btn-nao">Não</button>
         </div>
+      </section>
+
+      <div class="wrapper">
+        <svg
+          class="heart"
+          version="1.1"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+          x="0px"
+          y="0px"
+          width="101.7px"
+          height="87.6px"
+          viewBox="0 0 101.7 87.6"
+          enable-background="new 0 0 101.7 87.6"
+          xml:space="preserve"
+        >
+          <path
+            d="M51,12.8c0-0.1-0.1-0.1-0.1-0.2c0,0.1-0.1,0.1-0.1,0.2C31-10.7,0,0.2,0,28.9c0,27.6,40.7,56.9,50.9,58.8
+            c10.1-1.8,50.9-31.1,50.9-58.8C101.7,0.2,70.7-10.7,51,12.8z"
+          />
+        </svg>
+      </div>
     </main>
     <script src="background.js"></script>
     <script src="fugir.js"></script>
